tests/valid/function/generic_item_expected_fn_call.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f: unrestricted fn(affine isize) -> affine isize = id in
  (f 1)
}
