tests/invalid/linear_affine_error/linear_let_not_consumed.facet
fn f(x: linear isize) -> unrestricted () {
  let a: linear isize = x;
  ()
}
